syntax = "proto3";
package product;
option go_package="./;product";// ./后面不能用空格 直接;加上包名

service Product{
  rpc AddProduct(ProductInfo)returns(ProductResponse){}
  rpc UpdateProduct(ProductInfo)returns(ProductResponse){}
  rpc DeleteProductById(RequestId)returns(ProductResponse){}
  rpc FindProductById(RequestId)returns(ProductInfo){}
  rpc FindProductAll(RequestAll)returns(AllProduct){}
}

message ProductInfo{
  int64 id=1;
  string product_name=2;
  //保证幂等性
  string product_sku=3;
  double product_price=4;
  string product_description=5;
  int64 product_category_id =6;
  // 多个商品图片
  repeated ProductImage product_image=7;
  // 商品型号
  repeated ProductSize product_size=8;
  // 搜索引擎优化的展示信息
  ProductSeo product_seo=9;
}
message ProductImage{
  int64 id=1;
  string image_name=2;
  string image_url=3;
  //保证幂等性
  string image_code=4;

}
message ProductSize{
  int64 id=1;
  string size_name=2;
  string size_code=3;
}
message ProductSeo{
  int64 id=1;
  string seo_title=2;
  string seo_keywords=3;
  string seo_description=4;
  string seo_code=5;
}
message ProductResponse{
  int64 id=1;
  string message=2;
}
message RequestId{
  int64 product_id=1;
}
message RequestAll{}
message AllProduct{
  repeated ProductInfo product_info=1;
}